force-app/main/default/objects/Campaign/fields/Feeder_Markets__c.field-meta.xml
<CustomField>
    <fullName>Feeder_Markets__c</fullName>
    <label>Feeder Markets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>