force-app/main/default/objects/Campaign/fields/Focus_Brands__c.field-meta.xml
<CustomField>
    <fullName>Focus_Brands__c</fullName>
    <label>Focus Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>