force-app/main/default/objects/Campaign/fields/Hotel_Participation__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Participation__c</fullName>
    <label>Hotel Participation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>