force-app/main/default/objects/Campaign/fields/Sales_Department__c.field-meta.xml
<CustomField>
    <fullName>Sales_Department__c</fullName>
    <label>Sales Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inhouse Sales</fullName>
            </value>
            <value>
                <fullName>International Sales</fullName>
            </value>
            <value>
                <fullName>KAM Sales</fullName>
            </value>
            <value>
                <fullName>Distribution Partnerships Individual Travel</fullName>
            </value>
            <value>
                <fullName>Distribution Partnerships MICE&amp;Group Travel</fullName>
            </value>
            <value>
                <fullName>Regional Sales BeNeLux</fullName>
            </value>
            <value>
                <fullName>Regional Sales AT,CH,EE</fullName>
            </value>
            <value>
                <fullName>Regional Sales Middle East</fullName>
            </value>
            <value>
                <fullName>Regional Sales Germany</fullName>
            </value>
            <value>
                <fullName>Global Luxury Travel</fullName>
            </value>
            <value>
                <fullName>B2B Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>