force-app/main/default/objects/Campaign/fields/Segment_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code_Name__c</fullName>
    <label>Segment Code Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment_Code_Name</valueSetName>
    </valueSet>
</CustomField>