force-app/main/default/objects/Campaign/recordTypes/Sales_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Sales_Campaign</fullName>
    <active>true</active>
    <label>Sales Campaign</label>
</RecordType>